fix overflow auto

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body { touch-action: none }
 
 body {
   font-family: 'rubik', sans-serif;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 :focus {
@@ -77,11 +77,11 @@ img {
 }
 
 .search-icon {
-  width: 28px;
+  width: 24px;
 }
 
 .menu-icon {
-  width: 24px;
+  width: 20px;
 }
 
 /*footer*/
